Correct the z-index value of the backend notification component

--- a/assets/css/layouts/backend_layout.scss
+++ b/assets/css/layouts/backend_layout.scss
@@ -282,6 +282,10 @@ body legend {
     display: flex;
 }
 
+.backend-notification {
+    z-index: 9999;
+}
+
 @media (min-width: 768px) {
     .backend-page .nav-pills li {
         width: auto;
